# autocall

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  coverage.sh  example.py  pyproject.toml  release.sh  requirements.txt  run.py  run_tests.sh  setup.cfg  setup.py
.github/workflows/: python-app.yml  test-autocall.yml
autocall/: __init__.py  __main__.py  autocall.py  call.py  config.yml  constants.py  env.py  printer.py  reporter.py  validate.py  validator.py
autocall/resources/: report.html
autocall/templates/: report-blank.html  report-watercss.html  report.html
tests/: config.yml  test_calls.py  test_html.py  test_oauth.py  test_reports.py  test_validate_yaml.py
tests/mocks/: general.yml  ok.json  unexcepted.yml  unrec.yml
tests/sets/: ddg.yml  general.yml  invalid_1.yaml  ko_unrecognized.yaml  oauth.yaml  oauth_noheaders.yaml  ok_all_fields.yaml  ok_all_fields_no_auth.yaml  ok_tests.yaml
tests/sets/exceptions/: ko_badhttp.yaml  ko_invalidstatus.yaml  ko_malformedurl.yaml  ko_missing.yaml  ko_unexcepted.yaml
tests/test_server/: main.py  stdout
