[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build" 

[project]
name = "autocall"
version = "0.0.1"
authors = [
  { name="Karol Ciechlecki", email="karolc9991@gmail.com" },
]
description = "Automatize network calls with yaml definitions"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'pyYAML'
]

[project.urls]
"Homepage" = "https://github.com/krl42c/autocall"
